--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SplashScreenActivity"></activity>
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".AddPagerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.CHOOSER" />
