--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ allprojects {
         jcenter()
         maven {
             url "https://maven.google.com"
-        }
-        
+            }
+        maven { url "https://jitpack.io" }
     }
 }
 
