--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.0"
+    implementation 'com.android.support:cardview-v7:28.+'
+    implementation 'com.jcminarro:RoundKornerLayouts:0.2.0'
+    implementation 'com.ebanx:swipe-button:0.8.3'
 
 }
