--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.jcminarro:RoundKornerLayouts:0.2.0'
     implementation 'com.ebanx:swipe-button:0.8.3'
+    implementation 'com.karumi:dexter:6.0.2'
 
 
 }
