- new pager alert UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.example.firesms"
+        applicationId "com.simonekart.firesms"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
@@ -39,6 +40,8 @@ dependencies {
     implementation 'com.ebanx:swipe-button:0.8.3'
     implementation 'com.karumi:dexter:6.0.2'
     implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.github.jchernandez:SlideButton:0.1.2'
 
 
 }
