--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        google()  // Google's Maven repository
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.google.gms:google-services:4.3.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +24,7 @@ allprojects {
             url "https://maven.google.com"
             }
         maven { url "https://jitpack.io" }
+        google()  // Google's Maven repository
     }
 }
 
