--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.jcminarro:RoundKornerLayouts:0.2.0'
     implementation 'com.ebanx:swipe-button:0.8.3'
     implementation 'com.karumi:dexter:6.0.2'
-    implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'gun0912.ted:tedpermission:2.2.3'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.github.jchernandez:SlideButton:0.1.2'
 
