--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SmsActivity"></activity>
         <activity android:name=".PagerIntervencijeNetActivity" />
         <activity android:name=".DeveloperOptionsActivity" />
         <activity android:name=".SplashScreenActivity" />
