--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.2.3'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.github.jchernandez:SlideButton:0.1.2'
+    implementation 'com.github.MAXDeliveryNG:slideview:1.1.1'
 
 
 }
