--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,11 @@
     <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-
-
     <supports-screens
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="true"
         android:xlargeScreens="true" />
-
 
     <application
         android:allowBackup="true"
@@ -34,9 +31,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PagerAlertActivity" android:theme="@style/TransparentCompat"/>
+        <activity android:name=".PagerIntervencijeNetFullscreenActivity"
+            android:theme="@style/Theme.Design.NoActionBar"/>
+        <activity
+            android:name=".PagerAlertActivity"
+            android:theme="@style/TransparentCompat" />
         <activity android:name=".SmsActivity" />
-        <activity android:name=".PagerIntervencijeNetActivity" android:theme="@style/TransparentCompat"/>
+        <activity
+            android:name=".PagerIntervencijeNetActivity"
+            android:theme="@style/TransparentCompat" />
         <activity android:name=".DeveloperOptionsActivity" />
         <activity android:name=".SplashScreenActivity" />
         <activity android:name=".SettingsActivity" />
