--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.github.jchernandez:SlideButton:0.1.2'
     implementation 'com.github.MAXDeliveryNG:slideview:1.1.1'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
 
 
 }
